test/cases/phase0/error/class-stub/expected.c
#include "runtime.h"

typedef struct { TscError _base; } IOError;

int main(void) {
    TSC_INIT();
    return 0;
}
